--- a/src/index.css
+++ b/src/index.css
@@ -132,13 +132,6 @@ body {
   font-family: "Inter", sans-serif;
   background-color: #121213;
 }
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
 
 header {
   display: flex;
@@ -153,13 +146,44 @@ header {
   margin-bottom: 3rem;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  color: #f8f8f8;
+  padding: 1rem;
+  border-top: 2px solid #3a3a3c;
+  margin-top: 3rem;
+}
+
+footer p {
+  margin-bottom: 0.5rem;
+}
+
+a {
+  color: #f8f8f8;
+  text-decoration: underline;
+  transition: color 0.2s ease;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .wordle {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
 }
 
